# TimerResBenchmark

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TimerBenchmark(test).sln  appsettings.json  results.txt
TimerBenchmark/: Program.cs  TimerBenchmark.csproj
src/: main.rs
