[package]
name = "timer_res_benchmark"
version = "0.3.2"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
csv = "1.3.1"
indicatif = "0.17.9"
os_info = "3.9.2"
raw-cpuid = "11.3.0"
lazy_static = "1.5.0"
sysinfo = "0.33.1"

[dependencies.windows]
version = "0.59.0"
features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation"
]

[dev-dependencies]
# For testing

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
